--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - run:   |
+               sudo apt update
+               sudo apt install gcc-11 g++-11
+        shell: bash
+
+      # ... #
+
+       - run:   cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+         shell: bash
+         env:
+            CC:   gcc-11
+            CXX:  g++-11
+
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -40,4 +53,3 @@ jobs:
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: make -C ${{github.workspace}}/build check
-      
