Add raw experiments for testing.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_executable(app app.cpp)
-target_link_libraries(app PRIVATE ws_library)
+target_link_libraries(app
+  PRIVATE
+  ws_library
+  nlohmann_json::nlohmann_json
+  )
