--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,11 +6,11 @@ include(ExternalProject)
 # set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 
 ExternalProject_Add(
-        gtest
-        URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip
-        PREFIX ${CMAKE_CURRENT_BINARY_DIR}/gtest
-        INSTALL_COMMAND ""
-)
+  gtest
+  URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip
+  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/gtest
+  INSTALL_COMMAND ""
+  )
 
 ExternalProject_Get_Property(gtest source_dir binary_dir)
 
@@ -37,5 +37,10 @@ include(CTest)
 set(TEST_BINARY ${PROJECT_NAME}_test)
 
 add_executable(${TEST_BINARY} "main.cpp")
-target_link_libraries(${TEST_BINARY} PRIVATE ws_library libgtest libgmock)
+target_link_libraries(${TEST_BINARY}
+  PRIVATE
+  ws_library
+  libgtest
+  libgmock
+  nlohmann_json::nlohmann_json)
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
