--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,21 +15,18 @@ jobs:
     # The CMake configure and build commands are platform-agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu:impish
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
       - run: |
-             sudo apt update
-             sudo apt install gcc-11 g++-11
+             sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+             sudo apt update && sudo apt upgrade -y
+             sudo apt install build-essential libssl-dev gcc-11 g++-11 gcc-11-locales g++-11-multilib gcc-11-doc gcc-11-multilib -y
+             sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9 --slave /usr/bin/gcov gcov /usr/bin/gcov-9 --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-9 --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-9   && \
+             sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 --slave /usr/bin/g++ g++ /usr/bin/g++-11 --slave /usr/bin/gcov gcov /usr/bin/gcov-11 --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-11 --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-11;
         shell: bash
-
-      - run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-        shell: bash
-        env:
-          CC:   gcc-11
-          CXX:  g++-11
 
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
